6 коммит